@@ -132,6 +132,9 @@ $(function(){
        clear:  function() {
           this.$input.data('datetimepicker').date = null;
           this.$input.find('.active').removeClass('active');
+          if(!this.options.showbuttons) {
+             this.$input.closest('form').submit(); 
+          }          
        },
        
        autosubmit: function() {
